# reverseshield

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: ci.yml
docs/: README.md  api-reference.md  architecture.md  deployment.md  getting-started.md  security.md
rules/: core-rules.yaml
services/reporting/api/: .env.example  package.json  tsconfig.json
services/reporting/api/src/: config.ts  index.ts  server.ts  validators.ts
services/reporting/api/src/db/: index.ts  schema.sql
services/reporting/api/src/routes/: events.ts  recommendations.ts  rules.ts  score.ts  sites.ts
services/reporting/api/src/scoring/: engine.ts
services/reporting/api/test/: db.test.ts  events.test.ts  rules.test.ts  score.test.ts  sites.test.ts
services/reporting/dashboard/: index.html  package.json  tsconfig.json  vite.config.ts
services/reporting/dashboard/src/: App.tsx  main.tsx
services/reporting/dashboard/src/lib/: api.ts
